# wlt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.example.yml  docker-compose.yml  justfile  main.py  pyproject.toml  ssh_server.py
.github/workflows/: docker-publish.yml
nft/: demo.nft
src/: app.rs  config.rs  main.rs  nft.rs  persist.rs  ssh.rs  web.rs
templates/: index.html  index.html.j2  spa.html.j2
tests/: test_config.py  test_persist.py
wlt/: config.py  nft.py  persist.py  ssh.py  web.py
