[package]
name = "wlt"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
axum = "0.8.9"
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls-no-provider"] }
clap = { version = "4.6.1", features = ["derive"] }
hickory-resolver = "0.26.1"
indexmap = { version = "2.14.0", features = ["serde"] }
nftables = { version = "0.6.3", features = ["tokio"] }
rand = "0.10"
russh = { version = "0.62.2", default-features = false, features = ["flate2", "ring", "rsa"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "net", "time", "io-util", "sync"] }
tokio-util = "0.7.18"
toml = { version = "1.1.2", features = ["preserve_order"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
