[project]
name = "wlt"
version = "1.0.2"
description = "Flask interface for managing nftables-based network access"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "pydantic>=2.9.2",
    "gunicorn>=23.0.0",
    "asyncssh>=2.21.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.11.0",
    "isort>=7.0.0",
]


