[project]
name = "wlt"
version = "1.1.0"
description = "Web and SSH interface for managing nftables-based network access"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "pydantic>=2.9.2",
    "gunicorn>=23.0.0",
    "asyncssh>=2.21.0",
]

[project.scripts]
wlt-web = "wlt.web:main"
wlt-ssh = "wlt.ssh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.11.0",
    "isort>=7.0.0",
]


